tests/__snapshots__/validation-fileExtensions-wrong-option-value-type-stderr.snap.txt
Error: Option 'fileExtensions' requires an argument of type list.

  1 | {
> 2 |   "fileExtensions": "json"
    |                     ^
  3 | }

      at ./tstyche.config.json:2:21

